--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
                 </h1>
                 <p id="text01">
                   <span class="p">
-                    <strong>諦めようと思った瞬間、なぜそんなに長く持ちこたえたのか考えてみてください。 </span>
+                    <strong>諦めようと思った瞬間、なぜそんなに長く持ちこたえたのか考えてみてください。 أحب أن رعشة</span>
                   <span class="p">
                     <spoiler-text>The moment you think of giving up, think of the reason why you held on for so long.</spoiler-text>
                     </strong>
@@ -1308,11 +1308,6 @@
           </div>
           <hr id="divider01" class="style1 full">
           <hr id="divider02" class="style1 full">
-          <div id="credits" class="icc-credits">
-            <span>
-              <a href="https://carrd.co/build?ref=auto">Made with Carrd</a>
-            </span>
-          </div>
         </div>
       </div>
     </div>
