--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
                 </h1>
                 <p id="text01">
                   <span class="p">
-                    <strong>諦めようと思った瞬間、なぜそんなに長く持ちこたえたのか考えてみてください。 أحب أن رعشة</span>
+                    <strong>諦めようと思った瞬間、なぜそんなに長く持ちこたえたのか考えてみてください。<3</span>
                   <span class="p">
                     <spoiler-text>The moment you think of giving up, think of the reason why you held on for so long.</spoiler-text>
                     </strong>
